--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
+# Logs
 logs/
 *.log
-node_modules
-logs
-dist
-coverage
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+
+# Build output
+dist/
+coverage/
+
+# Optional caches
+.cache/
+.tmp/
