--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-node_modules
-logs
-dist
-coverage
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+
+# Build output
+dist/
+coverage/
+
+# Optional caches
+.cache/
+.tmp/
